--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,8 +33,13 @@
     "paths": {
       "*": ["node_modules/*"],
       "src/*": ["./*"],
-      "@t/*": ["types/*"]
+      "@sr-actions/*": ["actions/*"]
     }
   },
-  "include": ["src/**/*"],
+  "exclude": [
+    "node_modules"
+  ],
+  "include": [
+    "src/**/*.ts"
+  ]
 }
