--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "lib/index.js",
   "scripts": {
     "all": "yarn clean && yarn build && yarn format && yarn lint && yarn package && yarn test",
-    "build": "tsc && tscpaths -p tsconfig.json -s ./src -o ./lib",
+    "build": "tsc && tscpaths -p tsconfig.json -s ./src -o ./build",
     "clean": "rm -rf lib node_modules/.cache",
     "format": "prettier --write **/*.ts",
     "format-check": "prettier --check **/*.ts",
