--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "description": "TypeScript template action",
-  "main": "lib/index.js",
+  "main": "build/index.js",
   "scripts": {
     "all": "yarn clean && yarn build && yarn format && yarn lint && yarn package && yarn test",
-    "build": "tsc && tscpaths -p tsconfig.json -s ./src -o ./build",
-    "clean": "rm -rf lib node_modules/.cache",
+    "build": "rm -rf actions  && tsc && tscpaths -p tsconfig.json -s ./src -o ./build",
+    "clean": "rm -rf build node_modules/.cache",
     "format": "prettier --write **/*.ts",
     "format-check": "prettier --check **/*.ts",
     "lint": "eslint --config .eslintrc.js src",
