[ch70989] Implement a skeleton rebase action with typescript types for the payload.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,8 @@
     "paths": {
       "*": ["node_modules/*"],
       "src/*": ["./*"],
-      "@sr-actions/*": ["actions/*"]
+      "@sr-actions/*": ["actions/*"],
+      "@sr-services/*": ["services/*"]
     }
   },
   "exclude": [
