--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "all": "yarn clean && yarn build && yarn format && yarn lint && yarn package && yarn test",
     "build": "rm -rf actions  && tsc && tscpaths -p tsconfig.json -s ./src -o ./build",
     "clean": "rm -rf build node_modules/.cache",
-    "format": "prettier --write **/*.ts",
+    "format": "yarn lint --fix && prettier --write **/*.ts",
     "format-check": "prettier --check **/*.ts",
     "lint": "eslint --config .eslintrc.js src",
     "package": "./bin/package",
@@ -38,24 +38,27 @@
   },
   "dependencies": {
     "@actions/core": "^1.2.5",
-    "eslint-config-airbnb-typescript": "^10.0.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsdoc": "^30.5.1",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-unused-imports": "^0.1.3",
-    "husky": "^4.3.0"
+    "@actions/exec": "^1.0.4",
+    "@actions/github": "^4.0.0"
   },
   "devDependencies": {
+    "@octokit/webhooks": "^7.11.2",
     "@types/jest": "^26.0.13",
     "@types/node": "^14.10.1",
     "@typescript-eslint/parser": "^4.1.0",
     "@vercel/ncc": "^0.24.1",
     "eslint": "^7.9.0",
+    "eslint-config-airbnb-typescript": "^10.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-github": "^4.1.1",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jest": "^24.0.1",
+    "eslint-plugin-jsdoc": "^30.5.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-unused-imports": "^0.1.3",
+    "husky": "^4.3.0",
     "jest": "^26.4.0",
     "jest-circus": "^26.4.2",
     "js-yaml": "^3.14.0",
