--- a/src/actions/rebase-epic-action/action.yml
+++ b/src/actions/rebase-epic-action/action.yml
@@ -3,4 +3,9 @@ description: 'Rebases [Epic] pull requests when a commit is pushed'
 author: 'Shuttlerock'
 runs:
   using: 'node12'
-  main: './actions/rebase-epic-action/index.js'
+  main: 'index.js'
+inputs:
+  repo-token:
+    description: 'Github access token'
+  actions-write-token:
+    description: "Github access token with write access - added manually to organization secrets because the default token provided by actions doesn't have enough permissions"
