[ch75372] Allow an action to be triggered via a HTTP request.

--- a/.secrets.example
+++ b/.secrets.example
@@ -1,2 +1,3 @@
 ACTIONS_WRITE_TOKEN="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 GITHUB_TOKEN="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+JIRA_TOKEN="xxxxxxxxxxxxxxxxxxxxxxxx"
