[ch75383] Add a placeholder script for creating a pull request.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,8 @@
       "*": ["node_modules/*"],
       "src/*": ["./*"],
       "@sr-actions/*": ["actions/*"],
-      "@sr-services/*": ["services/*"]
+      "@sr-services/*": ["services/*"],
+      "@sr-triggers/*": ["triggers/*"]
     }
   },
   "exclude": [
