--- a/.github/workflows/trigger-action.yml
+++ b/.github/workflows/trigger-action.yml
@@ -2,6 +2,9 @@ name: 'Trigger Action'
 on:
   workflow_dispatch:
     inputs:
+      email:
+        description: 'The email of the user who triggered the action'
+        required:    true
       event:
         description: 'The name of the event to trigger'
         required:    true
