--- a/.secrets.example
+++ b/.secrets.example
@@ -1,3 +1,4 @@
 ACTIONS_WRITE_TOKEN="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 GITHUB_TOKEN="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+JIRA_EMAIL="xxxx@shuttlerock.com"
 JIRA_TOKEN="xxxxxxxxxxxxxxxxxxxxxxxx"
