--- a/package.json
+++ b/package.json
@@ -42,13 +42,15 @@
     "@octokit/rest": "^18.0.6",
     "@types/lodash": "^4.14.161",
     "jira-client": "^6.21.0",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "@octokit/webhooks": "^7.12.2",
     "@types/jest": "^26.0.14",
     "@types/jira-client": "^6.13.1",
     "@types/node": "^14.11.8",
+    "@types/node-fetch": "^2.5.7",
     "@typescript-eslint/parser": "^4.4.1",
     "@vercel/ncc": "^0.24.1",
     "eslint": "^7.11.0",
