[ch76636] Move some constants to Github Organization secrets.

--- a/.secrets.example
+++ b/.secrets.example
@@ -1,4 +1,7 @@
 ACTIONS_WRITE_TOKEN="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 GITHUB_TOKEN="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-JIRA_EMAIL="xxxx@shuttlerock.com"
+JIRA_EMAIL="xxxx@example.com"
+JIRA_HOST="example.atlassian.net"
 JIRA_TOKEN="xxxxxxxxxxxxxxxxxxxxxxxx"
+ORGANIZATION_NAME="Example"
+USER_API_PREFIX="https://users.example.com/api/private/credentials/"
