--- a/.github/workflows/trigger-action.yml
+++ b/.github/workflows/trigger-action.yml
@@ -19,7 +19,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./actions/trigger-action
         with:
-          jira-email:  ${{ secrets.JIRA_EMAIL }}
-          jira-token:  ${{ secrets.JIRA_TOKEN }}
-          repo-token:  ${{ secrets.GITHUB_TOKEN }}
-          write-token: ${{ secrets.ACTIONS_WRITE_TOKEN }}
+          jira-email:        ${{ secrets.JIRA_EMAIL }}
+          jira-host:         ${{ secrets.JIRA_HOST }}
+          jira-token:        ${{ secrets.JIRA_TOKEN }}
+          organization-name: ${{ secrets.ORGANIZATION_NAME }}
+          repo-token:        ${{ secrets.GITHUB_TOKEN }}
+          user-api-prefix:   ${{ secrets.USER_API_PREFIX }}
+          write-token:       ${{ secrets.ACTIONS_WRITE_TOKEN }}
