--- a/actions/trigger-action/action.yml
+++ b/actions/trigger-action/action.yml
@@ -7,9 +7,15 @@ runs:
 inputs:
   jira-email:
     description: 'Email address of the Jira user whose access token we are using'
+  jira-host:
+    description: 'The domain where Jira is hosted'
   jira-token:
     description: 'Jira access token'
+  organization-name:
+    description: 'The name of the Github organization'
   repo-token:
     description: 'Github access token'
+  user-api-prefix:
+    description: 'The prefix of the REST API method to fetch user credentials'
   write-token:
     description: 'Github access token with write access'
