[ch75383] Use the user's Github token for creating the PR.

--- a/.secrets.example
+++ b/.secrets.example
@@ -1,7 +1,8 @@
 ACTIONS_WRITE_TOKEN="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+CREDENTIALS_API_PREFIX="https://users.example.com/api/private/credentials/"
+CREDENTIALS_API_SECRET="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 GITHUB_TOKEN="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 JIRA_EMAIL="xxxx@example.com"
 JIRA_HOST="example.atlassian.net"
 JIRA_TOKEN="xxxxxxxxxxxxxxxxxxxxxxxx"
 ORGANIZATION_NAME="Example"
-USER_API_PREFIX="https://users.example.com/api/private/credentials/"
