--- a/actions/trigger-action/action.yml
+++ b/actions/trigger-action/action.yml
@@ -5,6 +5,10 @@ runs:
   using: 'node12'
   main: 'index.js'
 inputs:
+  credentials-api-prefix:
+    description: 'The prefix of the REST API method to fetch user credentials'
+  credentials-api-secret:
+    description: 'The shared signing secret used to fetch user credentials'
   jira-email:
     description: 'Email address of the Jira user whose access token we are using'
   jira-host:
@@ -15,7 +19,5 @@ inputs:
     description: 'The name of the Github organization'
   repo-token:
     description: 'Github access token'
-  user-api-prefix:
-    description: 'The prefix of the REST API method to fetch user credentials'
   write-token:
     description: 'Github access token with write access'
