[ch75383] Send a Slack message when a pull request has been created.

--- a/.secrets.example
+++ b/.secrets.example
@@ -6,3 +6,4 @@ JIRA_EMAIL="xxxx@example.com"
 JIRA_HOST="example.atlassian.net"
 JIRA_TOKEN="xxxxxxxxxxxxxxxxxxxxxxxx"
 ORGANIZATION_NAME="Example"
+SLACK_TOKEN="xoxb-xxxxxxxxxx-xxxxxxxxxxxxx-xxxxxxxxxxxxxxxxxxxxxxxx"
