--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@actions/exec": "^1.0.4",
     "@actions/github": "^4.0.0",
     "@octokit/rest": "^18.0.6",
+    "@slack/web-api": "^5.12.0",
     "@types/lodash": "^4.14.161",
     "jira-client": "^6.21.0",
     "lodash": "^4.17.20",
