[ch75383] Report errors to Slack.

--- a/.secrets.example
+++ b/.secrets.example
@@ -6,4 +6,5 @@ JIRA_EMAIL="xxxx@example.com"
 JIRA_HOST="example.atlassian.net"
 JIRA_TOKEN="xxxxxxxxxxxxxxxxxxxxxxxx"
 ORGANIZATION_NAME="Example"
+SLACK_ERROR_CHANNEL_ID="C0000000000"
 SLACK_TOKEN="xoxb-xxxxxxxxxx-xxxxxxxxxxxxx-xxxxxxxxxxxxxxxxxxxxxxxx"
