--- a/.github/workflows/trigger-action.yml
+++ b/.github/workflows/trigger-action.yml
@@ -26,5 +26,6 @@ jobs:
           jira-token:             ${{ secrets.JIRA_TOKEN }}
           organization-name:      ${{ secrets.ORGANIZATION_NAME }}
           repo-token:             ${{ secrets.GITHUB_TOKEN }}
+          slack-error-channel-id: ${{ secrets.SLACK_ERROR_CHANNEL_ID }}
           slack-token:            ${{ secrets.SLACK_TOKEN }}
           write-token:            ${{ secrets.ACTIONS_WRITE_TOKEN }}
