[ch75383] Move some fixtures to a global tests/ folder.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,7 @@
       "src/*": ["./*"],
       "@sr-actions/*": ["actions/*"],
       "@sr-services/*": ["services/*"],
+      "@sr-tests/*": ["tests/*"],
       "@sr-triggers/*": ["triggers/*"]
     }
   },
