[#105] [STUDIO-538] When a PR is set to 'Ready for Review', add the 'please-review' label, and move to 'Tech Review'.

--- a/actions/pull-request-closed-action/action.yml
+++ b/actions/pull-request-closed-action/action.yml
@@ -1,5 +1,5 @@
-name: 'Pull Request Closed Action'
-description: 'Organizes project stories after a pull request is closed '
+name: 'Pull request closed'
+description: 'Organizes project stories after a pull request is closed'
 author: 'Shuttlerock'
 runs:
   using: 'node12'
