--- a/src/actions/pull-request-ready-for-review-action/action.yml
+++ b/src/actions/pull-request-ready-for-review-action/action.yml
@@ -1,14 +1,10 @@
-name: 'Trigger action'
-description: 'Trigger an action via a HTTP request'
+name: 'Pull request ready for review'
+description: 'Organizes project stories after a pull request is marked as ready for review'
 author: 'Shuttlerock'
 runs:
   using: 'node12'
   main: 'index.js'
 inputs:
-  credentials-api-prefix:
-    description: 'The prefix of the REST API method to fetch user credentials'
-  credentials-api-secret:
-    description: 'The shared signing secret used to fetch user credentials'
   jira-email:
     description: 'Email address of the Jira user whose access token we are using'
   jira-host:
@@ -19,9 +15,5 @@ inputs:
     description: 'The name of the Github organization'
   repo-token:
     description: 'Github access token'
-  slack-error-channel-id:
-    description: "ID of the Slack channel to post errors to, if we don't know where else to send them"
-  slack-token:
-    description: 'Slack access token with write access'
   write-token:
     description: 'Github access token with write access'
