[#118] [STUDIO-535] use a bigger CircleCI instance for jest tests.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,7 @@ jobs:
 
   jest:
     <<: *defaults
+    resource_class: large # Work around out-of-memory errors.
     steps:
       - restore_cache:
           name: "Restore checkout cache"
