--- a/.github/workflows/pull-request-labeled-action.yml
+++ b/.github/workflows/pull-request-labeled-action.yml
@@ -1,7 +1,7 @@
 name: 'Pull request labeled'
 on:
   pull_request:
-    types: [labeled, unlabeled]
+    types: [labeled]
 
 jobs:
   pull_request_labeled_action:
