--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@octokit/rest": "^18.0.6",
     "@slack/web-api": "^5.13.0",
     "@types/lodash": "^4.14.162",
+    "circleci-api": "^4.1.3",
     "jira-client": "^6.21.0",
     "lodash": "^4.17.20",
     "mustache": "^4.0.1",
