[#176] [STUDIO-583] Add a function for fetching repository details from the credentials API.

--- a/.secrets.example
+++ b/.secrets.example
@@ -1,5 +1,5 @@
 ACTIONS_WRITE_TOKEN="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-CREDENTIALS_API_PREFIX="https://users.example.com/api/private/credentials/"
+CREDENTIALS_API_PREFIX="https://users.example.com/api/private/"
 CREDENTIALS_API_SECRET="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 GITHUB_TOKEN="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 JIRA_EMAIL="xxxx@example.com"
