[#179] [STUDIO-540] Add a 'yarn quick-package' command to only package things that have changed during development.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format-check": "prettier --check **/*.ts",
     "lint": "eslint --config .eslintrc.js src",
     "package": "./bin/package",
+    "quick-package": "./bin/quick-package",
     "test": "jest"
   },
   "repository": {
