--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,9 @@ defaults: &defaults
 
 version: 2.1
 
+orbs:
+  jira: circleci/jira@1.3.0
+
 jobs:
   checkout_code:
     <<: *defaults
@@ -35,6 +38,7 @@ jobs:
           key: v1-yarn-{{ checksum "yarn.lock" }}
           paths:
             - ~/actions/node_modules
+      - jira/notify
 
   compile:
     <<: *defaults
@@ -53,6 +57,7 @@ jobs:
             yarn clean
             yarn build
             yarn package
+      - jira/notify
 
   jest:
     <<: *defaults
@@ -65,6 +70,7 @@ jobs:
           name: "Restore yarn cache"
           key: v1-yarn-{{ checksum "yarn.lock" }}
       - run: yarn test
+      - jira/notify
 
   lint:
     <<: *defaults
@@ -74,6 +80,7 @@ jobs:
       - restore_cache:
           key: v1-yarn-{{ checksum "yarn.lock" }}
       - run: yarn lint
+      - jira/notify
 
   format:
     <<: *defaults
@@ -83,6 +90,7 @@ jobs:
       - restore_cache:
           key: v1-yarn-{{ checksum "yarn.lock" }}
       - run: yarn format-check
+      - jira/notify
 
 workflows:
   version: 2
@@ -91,28 +99,34 @@ workflows:
       - checkout_code:
           context:
             - docker-hub-creds
+            - jira-integration
       - yarn_dependencies:
           context:
             - docker-hub-creds
+            - jira-integration
           requires:
             - checkout_code
       - compile:
           context:
             - docker-hub-creds
+            - jira-integration
           requires:
             - yarn_dependencies
       - jest:
           context:
             - docker-hub-creds
+            - jira-integration
           requires:
             - yarn_dependencies
       - lint:
           context:
             - docker-hub-creds
+            - jira-integration
           requires:
             - yarn_dependencies
       - format:
           context:
             - docker-hub-creds
+            - jira-integration
           requires:
             - yarn_dependencies
