--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@actions/github": "^4.0.0",
     "@octokit/rest": "^18.0.9",
     "@slack/web-api": "^5.14.0",
-    "@types/lodash": "^4.14.166",
+    "dateformat": "^4.4.1",
     "jira-client": "^6.21.0",
     "lodash": "^4.17.20",
     "mustache": "^4.1.0",
@@ -50,8 +50,10 @@
   },
   "devDependencies": {
     "@octokit/webhooks": "^7.21.0",
+    "@types/dateformat": "^3.0.1",
     "@types/jest": "^26.0.19",
     "@types/jira-client": "^6.13.1",
+    "@types/lodash": "^4.14.166",
     "@types/mustache": "^4.1.0",
     "@types/node": "^14.14.16",
     "@types/node-fetch": "^2.5.7",
