--- a/.github/workflows/pull-request-labeled-action.yml
+++ b/.github/workflows/pull-request-labeled-action.yml
@@ -12,4 +12,5 @@ jobs:
         with:
           organization-name: ${{ secrets.ORGANIZATION_NAME }}
           repo-token:        ${{ secrets.GITHUB_TOKEN }}
+          slack-token:       ${{ secrets.SLACK_TOKEN }}
           write-token:       ${{ secrets.ACTIONS_WRITE_TOKEN }}
