--- a/src/actions/pull-request-labeled-action/action.yml
+++ b/src/actions/pull-request-labeled-action/action.yml
@@ -9,5 +9,7 @@ inputs:
     description: 'The name of the Github organization'
   repo-token:
     description: 'Github access token'
+  slack-token:
+    description: 'Slack access token with write access'
   write-token:
     description: 'Github access token with write access'
