--- a/src/actions/rebase-epic-action/action.yml
+++ b/src/actions/rebase-epic-action/action.yml
@@ -7,5 +7,7 @@ runs:
 inputs:
   repo-token:
     description: 'Github access token'
+  slack-token:
+    description: 'Slack access token with write access'
   write-token:
     description: "Github access token with write access - added manually to organization secrets because the default token provided by actions doesn't have enough permissions"
