--- a/.github/workflows/pull-request-labeled-action.yml
+++ b/.github/workflows/pull-request-labeled-action.yml
@@ -10,7 +10,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: Shuttlerock/actions/actions/pull-request-labeled-action@master
         with:
-          organization-name: ${{ secrets.ORGANIZATION_NAME }}
-          repo-token:        ${{ secrets.GITHUB_TOKEN }}
-          slack-token:       ${{ secrets.SLACK_TOKEN }}
-          write-token:       ${{ secrets.ACTIONS_WRITE_TOKEN }}
+          credentials-api-prefix: ${{ secrets.CREDENTIALS_API_PREFIX }}
+          credentials-api-secret: ${{ secrets.CREDENTIALS_API_SECRET }}
+          organization-name:      ${{ secrets.ORGANIZATION_NAME }}
+          repo-token:             ${{ secrets.GITHUB_TOKEN }}
+          slack-token:            ${{ secrets.SLACK_TOKEN }}
+          write-token:            ${{ secrets.ACTIONS_WRITE_TOKEN }}
