--- a/.github/workflows/pull-request-closed-action.yml
+++ b/.github/workflows/pull-request-closed-action.yml
@@ -10,10 +10,12 @@ jobs:
       - uses: actions/checkout@v2
       - uses: Shuttlerock/actions/actions/pull-request-closed-action@master
         with:
-          jira-email:        ${{ secrets.JIRA_EMAIL }}
-          jira-host:         ${{ secrets.JIRA_HOST }}
-          jira-token:        ${{ secrets.JIRA_TOKEN }}
-          organization-name: ${{ secrets.ORGANIZATION_NAME }}
-          repo-token:        ${{ secrets.GITHUB_TOKEN }}
-          slack-token:       ${{ secrets.SLACK_TOKEN }}
-          write-token:       ${{ secrets.ACTIONS_WRITE_TOKEN }}
+          credentials-api-prefix: ${{ secrets.CREDENTIALS_API_PREFIX }}
+          credentials-api-secret: ${{ secrets.CREDENTIALS_API_SECRET }}
+          jira-email:             ${{ secrets.JIRA_EMAIL }}
+          jira-host:              ${{ secrets.JIRA_HOST }}
+          jira-token:             ${{ secrets.JIRA_TOKEN }}
+          organization-name:      ${{ secrets.ORGANIZATION_NAME }}
+          repo-token:             ${{ secrets.GITHUB_TOKEN }}
+          slack-token:            ${{ secrets.SLACK_TOKEN }}
+          write-token:            ${{ secrets.ACTIONS_WRITE_TOKEN }}
