--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "devDependencies": {
     "@octokit/webhooks": "^8.4.1",
+    "@octokit/webhooks-definitions": "^3.61.1",
     "@types/dateformat": "^3.0.1",
     "@types/jest": "^26.0.20",
     "@types/jira-client": "^6.13.1",
