--- a/.secrets.example
+++ b/.secrets.example
@@ -1,4 +1,5 @@
 ACTIONS_WRITE_TOKEN="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+CIRCLE_CI_TOKEN="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 CREDENTIALS_API_PREFIX="https://users.example.com/api/private/"
 CREDENTIALS_API_SECRET="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 GITHUB_TOKEN="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
