--- a/.github/workflows/trigger-action.yml
+++ b/.github/workflows/trigger-action.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: ./actions/trigger-action
+      - uses: Shuttlerock/actions/actions/trigger-action@master
         with:
           credentials-api-prefix: ${{ secrets.CREDENTIALS_API_PREFIX }}
           credentials-api-secret: ${{ secrets.CREDENTIALS_API_SECRET }}
