--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   },
   "devDependencies": {
     "@octokit/webhooks": "^9.12.0",
-    "@octokit/webhooks-definitions": "^3.67.2",
+    "@octokit/webhooks-types": "^4.3.0",
     "@types/dateformat": "^3.0.1",
     "@types/jest": "^26.0.24",
     "@types/jira-client": "^6.13.1",
@@ -68,6 +68,7 @@
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-github": "^4.1.3",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jest": "^24.4.0",
