--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -3,12 +3,6 @@ name: Release
 on:
   workflow_dispatch:
     inputs:
-      owner:
-        description: 'The owner of the Github repository'
-        required:    true
-      repository:
-        description: 'The name of the Github repository'
-        required:    true
       title:
         description: 'The title of the pull request'
         required:    true
@@ -24,7 +18,7 @@ jobs:
 
       - name: Figure out the next pull request number
         run:  |
-          echo "NEXT_PR_NUM=$(curl -H "Accept: application/vnd.github.v3+json" "https://api.github.com/repos/${{ github.event.inputs.owner }}/${{ github.event.inputs.repository }}/pulls?state=all&amp;sort=created&amp;direction=desc&amp;per_page=1" | grep '"number":' | tr -dc '0-9' | awk '{ print $1 + 1 }')" >> $GITHUB_ENV
+          echo "NEXT_PR_NUM=$(curl -H "Accept: application/vnd.github.v3+json" "https://api.github.com/repos/${{ env.GITHUB_REPOSITORY }}/pulls?state=all&amp;sort=created&amp;direction=desc&amp;per_page=1" | grep '"number":' | tr -dc '0-9' | awk '{ print $1 + 1 }')" >> $GITHUB_ENV
 
       - name: Make a .meta file so that we have a change to base the pull request on
         run:  mkdir -p .meta && date "+%Y-%m-%d %H:%M\n${{ github.event.inputs.title }}\nby @${{ github.actor }}" > .meta/${{ env.NEXT_PR_NUM }}.md && git add .meta/${{ env.NEXT_PR_NUM }}.md
@@ -41,8 +35,8 @@ jobs:
       - name: Output the meta file
         run: cat .meta/${{ env.NEXT_PR_NUM }}.md
 
-      #- name: Output the body
-      #  run: echo "${{ env.PR_BODY }}"
+      - name: Output the body
+        run: echo "${{ env.PR_BODY }}"
 
       # - name: Create Pull Request
       #   uses: peter-evans/create-pull-request@v3
