test PR creation workflow, take 13.

--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -18,7 +18,12 @@ jobs:
 
       - name: Figure out the next pull request number
         run:  |
-          echo "NEXT_PR_NUM=$(curl -H "Accept: application/vnd.github.v3+json" -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/pulls?state=all&amp;sort=created&amp;direction=desc&amp;per_page=1" | grep '"number":' | tr -dc '0-9' | awk '{ print $1 + 1 }')" >> $GITHUB_ENV
+          echo $GITHUB_SERVER_URL
+          echo $GITHUB_REPOSITORY
+
+      - name: Figure out the next pull request number
+        run:  |
+          echo "NEXT_PR_NUM=$(curl -H "Accept: application/vnd.github.v3+json" -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/pulls?state=all&amp;sort=created&amp;direction=desc&amp;per_page=1" | grep '"number":' | tr -dc '0-9' | awk '{ print $1 + 1 }')" >> $GITHUB_ENV
 
       - name: Make a .meta file so that we have a change to base the pull request on
         run:  mkdir -p .meta && date "+%Y-%m-%d %H:%M\n${{ github.event.inputs.title }}\nby @${{ github.actor }}" > .meta/${{ env.NEXT_PR_NUM }}.md && git add .meta/${{ env.NEXT_PR_NUM }}.md
