--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -20,11 +20,11 @@ jobs:
         run:  |
           echo $GITHUB_SERVER_URL
           echo $GITHUB_REPOSITORY
-          echo "$(curl -H 'Accept: application/vnd.github.v3+json' -H 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' 'https://api.github.com/repos/Shuttlerock/actions/pulls?state=all&amp;sort=created&amp;direction=desc&amp;per_page=1')"
+          echo "$(curl -H 'Accept: application/vnd.github.v3+json' -H 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' 'https://api.github.com/repos/${{ env.GITHUB_REPOSITORY }}/pulls?state=all&amp;sort=created&amp;direction=desc&amp;per_page=1')"
 
       - name: Figure out the next pull request number
         run:  |
-          echo "NEXT_PR_NUM=$(curl -H 'Accept: application/vnd.github.v3+json' -H 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' 'https://api.github.com/repos/Shuttlerock/actions/pulls?state=all&amp;sort=created&amp;direction=desc&amp;per_page=1' | grep '\"number\":' | tr -dc '0-9' | awk '{ print $1 + 1 }')" >> $GITHUB_ENV
+          echo "NEXT_PR_NUM=$(curl -H 'Accept: application/vnd.github.v3+json' -H 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' 'https://api.github.com/repos/${{ env.GITHUB_REPOSITORY }}/pulls?state=all&amp;sort=created&amp;direction=desc&amp;per_page=1' | grep '\"number\":' | tr -dc '0-9' | awk '{ print $1 + 1 }')" >> $GITHUB_ENV
 
       - name: Make a .meta file so that we have a change to base the pull request on
         run:  mkdir -p .meta && date "+%Y-%m-%d %H:%M\n${{ github.event.inputs.title }}\nby @${{ github.actor }}" > .meta/${{ env.NEXT_PR_NUM }}.md && git add .meta/${{ env.NEXT_PR_NUM }}.md
