--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -23,7 +23,7 @@ jobs:
           echo "${GITHUB_REPOSITORY}"
           echo "$( echo ${GITHUB_REPOSITORY})"
           echo "${{ env.GITHUB_REPOSITORY }}"
-          echo $GITHUB_ENV
+          cat $GITHUB_ENV
           echo "$(echo -H 'Accept: application/vnd.github.v3+json' -H 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' 'https://api.github.com/repos/ ${GITHUB_REPOSITORY} /pulls?state=all&amp;sort=created&amp;direction=desc&amp;per_page=1')"
 
       - name: Figure out the next pull request number
