[skip ci] test PR creation workflow, take 32.

--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -21,7 +21,7 @@ jobs:
           echo "NEXT_PR_NUM=$(curl -H 'Accept: application/vnd.github.v3+json' -H 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' 'https://api.github.com/repos/${{ github.repository }}/pulls?state=all&amp;sort=created&amp;direction=desc&amp;per_page=1' | grep '\"number\":' | tr -dc '0-9' | awk '{ print $1 + 1 }')" >> $GITHUB_ENV
 
       - name: Make a .meta file so that we have a change to base the pull request on
-        run:  mkdir -p .meta && date "+%Y-%m-%d %H:%M\n${{ github.event.inputs.title }}\nby @${{ github.actor }}" > .meta/${{ env.NEXT_PR_NUM }}.md && git add .meta/${{ env.NEXT_PR_NUM }}.md
+        run:  mkdir -p .meta && date "+%Y-%m-%d %H:%M\n${{ github.event.inputs.title }}\nby @${{ github.actor }}" > .meta/${{ env.NEXT_PR_NUM }}.md
 
       - name: Generate the PR body and escape line breaks
         run: echo "PR_BODY=$(sed '1s/.*/## ${{ github.event.inputs.title }}/' .github/PULL_REQUEST_TEMPLATE.md | sed ':a;N;$!ba;s/\n/\\n/g' )" >> $GITHUB_ENV
@@ -41,9 +41,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
-          commit-message: ${{ github.event.inputs.title }}
           committer:      GitHub <noreply@github.com>
-          author:         ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
           branch:         ${{ env.NEW_BRANCH_NAME }}
           delete-branch:  true
           title:          '${{ github.event.inputs.title }}'
