[skip ci] test PR creation workflow, take 35.

--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -25,6 +25,7 @@ jobs:
 
       - name: Generate the PR body and escape line breaks
         run: echo "PR_BODY=$(sed '1s/.*/## ${{ github.event.inputs.title }}/' .github/PULL_REQUEST_TEMPLATE.md | sed ':a;N;$!ba;s/\n/\\n/g' )" >> $GITHUB_ENV
+        echo "::set-output name=content::$PR_BODY"
 
       - name: Output the branch name
         run: echo "${{ env.NEW_BRANCH_NAME }}"
@@ -38,16 +39,16 @@ jobs:
       - name: Output the body
         run: echo "${{ env.PR_BODY }}"
 
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v3
-        with:
-          commit-message: 'build: ${{ github.event.inputs.title }}'
-          committer:      GitHub <noreply@github.com>
-          branch:         ${{ env.NEW_BRANCH_NAME }}
-          delete-branch:  true
-          title:          '${{ github.event.inputs.title }}'
-          assignees:      ${{ github.actor }}
-          draft:          true
-          labels:         in-progress
-          body: |
-            ${{ env.PR_BODY }}
+      # - name: Create Pull Request
+      #   uses: peter-evans/create-pull-request@v3
+      #   with:
+      #     commit-message: 'build: ${{ github.event.inputs.title }} [skip ci]'
+      #     committer:      GitHub <noreply@github.com>
+      #     branch:         ${{ env.NEW_BRANCH_NAME }}
+      #     delete-branch:  true
+      #     title:          '${{ github.event.inputs.title }}'
+      #     assignees:      ${{ github.actor }}
+      #     draft:          true
+      #     labels:         in-progress
+      #     body: |
+      #       ${{ env.PR_BODY }}
